--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ body {
   text-align: center;
 }
 .kartu-profil img {
-  width: 150px;
+  width: 240px;
+  height: 240px ;
   border-radius: 50%;
 }
